# followupboss-to-mailchimp

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.yaml  sync.bat  sync.py  sync.sh
