[tool.poetry]
name = "sync-fub-2-mailchimp"
version = "0.1.0"
description = "Sync all email address from FollowUpBoss to Mailchimp, including addresses of secondary contacts."
authors = ["Enrico Marchesin"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
dynaconf = "^3.1.9"
polars = "^0.13.51"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
